# chorograph-opencode-cli-plugin-rust

./: Cargo.toml
src/: lib.rs
