[package]
name = "chorograph-opencode-cli-plugin-rust"
version = "0.1.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chorograph-plugin-sdk-rust = { git = "https://github.com/adevcorn/chorograph-plugin-sdk-rust.git", tag = "v0.2.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
